# action_test_repo

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci_pipeline.yml  hf.yml
src/: app.py  pipeline.py
tests/: test_pipeline.py
