[tool.poetry]
name = "git_action_pipeline"
authors = [
    "Jae Choi <jae.hyuk.choi.0325@gmail.com>",
]
version = "0.0.1"
packages = [{include = "src"}]
description = "Git actionpoety pipeline test"

[tool.poetry.dependencies]
python = ">=3.8"


[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = ">=23.9.1"
ipython = "*"
pylint = "*"
tensorflow = "*"
transformers = "*"
gradio = "*"

[tool.pytest.ini_options]
markers = [ "pipeline_test: Mark tests as pipelines tests"]

[tool.coverage.report]
omit = [
  "tests/*",
]